--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ body {
    align-items: center;
 }
 
+body .img-container img {
+   display: none;
+}
+
 #container {
    display: flex;
    flex-direction: column;
@@ -202,5 +206,20 @@ form>a.social {
 
    #container p {
       font-size: 2rem;
+   }
+}
+
+@media (min-width: 1024px) {
+   body .img-container {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 50%;
+      min-height: 100vh;
+      background-color: #F3FFF2;
+   }
+
+   body .img-container img {
+      display: block;
    }
 }
